# sandbox

./: .gitignore
openclaw-trading-bot/: .dockerignore  .env.example  .gitignore  CLAUDE.md  CLAUDE_AGENT_MEMORY.md  Dockerfile  MEMORY.md  MEMORY_INDEX.md  QUICKSTART.md  README.md  ROADMAP.md  TRADING_BOT_ARCHITECTURE.md  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt
openclaw-trading-bot/config/: assets.yaml  mode.example.yaml  pricing.yaml  risk.yaml  schedules.yaml  sources.yaml  strategies.yaml  telegram.yaml
openclaw-trading-bot/deploy/: Caddyfile.snippet  auto-update.sh  logrotate.conf
openclaw-trading-bot/deploy/systemd/: openclaw-auto-update.service  openclaw-auto-update.timer
openclaw-trading-bot/scripts/: smoke_docker.sh  smoke_test.sh
openclaw-trading-bot/skills/: README.md
openclaw-trading-bot/skills/backtest-quick/: SKILL.md
openclaw-trading-bot/skills/dashboard-builder/: SKILL.md
openclaw-trading-bot/skills/market-scan/: SKILL.md
openclaw-trading-bot/skills/memory-consolidate/: SKILL.md
openclaw-trading-bot/skills/news-pulse/: SKILL.md
openclaw-trading-bot/skills/risk-gate/: SKILL.md
openclaw-trading-bot/skills/self-improve/: SKILL.md
openclaw-trading-bot/skills/signal-crossing/: SKILL.md
openclaw-trading-bot/skills/strategy-selector/: SKILL.md
openclaw-trading-bot/src/: __init__.py  main.py
openclaw-trading-bot/src/contracts/: __init__.py  cycle.py  regime.py  skills.py  strategy.py
openclaw-trading-bot/src/dashboards/: __init__.py  api.py  cost_repo.py  html_builder.py  pricing.py
openclaw-trading-bot/src/data/: fetcher.py
openclaw-trading-bot/src/data/sources/: __init__.py  base.py  boursorama.py  ccxt_source.py  coingecko.py  exchangerate_host.py  (+3 more)
openclaw-trading-bot/src/indicators/: __init__.py  ichimoku.py  momentum.py  trend.py  volatility.py  volume.py  weights.py
openclaw-trading-bot/src/memory/: __init__.py  db.py  lesson_index.py  markdown_exporter.py  repositories.py
openclaw-trading-bot/src/news/: news_pulse.py
openclaw-trading-bot/src/orchestrator/: resilience.py  run.py
openclaw-trading-bot/src/regime/: __init__.py  features.py  hmm_detector.py  persistence.py
openclaw-trading-bot/src/risk/: __init__.py  circuit_breaker.py  gate.py  ichimoku_gate.py  kill_switch.py
openclaw-trading-bot/src/scheduler/: __init__.py  loader.py  runner.py
openclaw-trading-bot/src/self_improve/: __init__.py  collector.py  diagnostician.py  patch.py  pipeline.py  pr_generator.py  rollback.py  selector.py  validator.py
openclaw-trading-bot/src/signals/: __init__.py  market_scan.py  signal_crossing.py  strategy_selector.py
openclaw-trading-bot/src/strategies/: __init__.py  _common.py  breakout_momentum.py  divergence_hunter.py  event_driven_macro.py  ichimoku_trend_following.py  mean_reversion.py  news_driven_momentum.py  volume_profile_scalp.py
openclaw-trading-bot/src/telegram/: __init__.py  notifier.py  webhook.py
openclaw-trading-bot/src/utils/: config_loader.py  error_codes.py  health_checks.py  logging_utils.py  ticker_map.py
openclaw-trading-bot/tests/: test_config_loader.py  test_contracts.py  test_cost_repo.py  test_dashboard_api.py  test_data_fetcher.py  test_html_builder.py  test_indicators.py  test_market_scan.py  test_memory.py  test_news_pulse.py  test_orchestrator.py  test_regime.py  test_resilience.py  test_risk.py  test_scheduler.py  test_self_improve_collector.py  test_self_improve_diagnostician.py  test_self_improve_patch_validator.py  test_self_improve_pipeline.py  test_self_improve_pr_generator.py  test_self_improve_rollback.py  test_self_improve_selector.py  test_strategies.py  test_strategy_selector.py  test_telegram_notifier.py  test_telegram_webhook.py  test_utils.py
